# webforcpp

./: .clang-tidy  .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  FEATURES.md  LICENSE.md  README.md  vcpkg.json  webforcpp.pc.in
cmake/: coverage.cmake  cppcheck.arg  features.cmake  linting.cmake  project.cmake  tidy.arg
src/: _client_helper.hpp  http.hpp  httplib.h  https.hpp  ipinfo.hpp  json.hpp  sajson.h  utils.hpp
test/: compiler.hpp  https.cpp  ipinfo.cpp  json.cpp
